celTofar and farenTocels

--- a/area.html
+++ b/area.html
@@ -11,6 +11,7 @@
     <h1 class="text-center fs-1">This is the Area Calculation </h1>
     <h2>Righttriangle Calculation</h2>
 
-    <script src="area.js"></script>
+    <!-- <script src="area.js"></script> -->
+    <script src="app.js/farenToCels.js"></script>
 </body>
 </html>
